--- a/styles.css
+++ b/styles.css
@@ -11,30 +11,6 @@
     background: #eff4fd;
 }
 
-nav{
-    display: flex;
-    width: 84%;
-    margin: auto;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: space-between;
-}
-
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-}
-
-nav ul li a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-}
-
-nav ul li a:hover{
-    color: #ff0000;
-}
 
 .details{
     margin-left: 8%;
@@ -55,6 +31,20 @@ span {
     color: #555;
 
 }
+
+.navbar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s;
+   text-align: center;
+}
+
 
 .details a {
     background: #212121;
